Поиск по строке в роуте я получения участников торгов
